<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_main"
    >
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_add_consumption"
        android:onClick="addConsumption"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_view_consumption"
        android:onClick="viewConsumption"/>
    <TextView
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="1"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_delete_all_beers"
        android:onClick="deleteAllBeers"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_delete_all_consumptions"
        android:onClick="deleteAllConsumptions"/>
</LinearLayout>