<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_select_volume"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.clempaj.beerconsumption.activity.SelectVolumeActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="0dp">
        <Button
            android:id="@+id/cl25"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:text="@string/cl25"
            android:textSize="50dp"
            android:textAllCaps="false"
            android:onClick="selectButtonVolume"
            />
        <Button
            android:id="@+id/cl33"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:text="@string/cl33"
            android:textSize="50dp"
            android:textAllCaps="false"
            android:onClick="selectButtonVolume"
            />
        <Button
            android:id="@+id/cl50"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:text="@string/cl50"
            android:textSize="50dp"
            android:textAllCaps="false"
            android:onClick="selectButtonVolume"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/volume_manual"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:hint="@string/hint_volume"
                android:inputType="number"
                android:imeOptions="actionDone"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_volume"
                android:onClick="selectTextVolume"
                />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
