<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_beer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.clempaj.beerconsumption.activity.AddBeerActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <GridLayout
            android:layout_height="wrap_content"
            android:layout_width= "match_parent"
            android:columnCount="2">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/add_beer_name"
                android:textSize="20dp"/>
            <EditText
                android:id="@+id/add_beer_name"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_columnWeight="1"
                android:hint="@string/add_beer_name_hint"
                />
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/add_beer_alcohol"
                android:textSize="20dp"/>
            <EditText
                android:id="@+id/add_beer_alcohol"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_width="wrap_content"
                android:hint="@string/add_beer_alcohol_hint"
                android:inputType="numberDecimal"/>
        </GridLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_beer_button"
            android:onClick="addBeer"/>
        <TextView
            android:id="@+id/warning_add_beer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:textSize="20dp"
            android:layout_marginTop="8dp"/>
    </LinearLayout>

</RelativeLayout>
