<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_view_consumption"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.clempaj.beerconsumption.activity.ViewConsumptionActivity">
    <TableLayout
        android:id="@+id/table_consumption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableRow>
            <TextView android:text="@string/title_date"
                android:textSize="20dp"
                android:padding="3px"
                android:layout_weight="1"/>
            <TextView android:text="@string/title_beer"
                android:textSize="20dp"
                android:padding="3px"
                android:layout_weight="3"/>
            <TextView android:text="@string/title_volume"
                android:textSize="20dp"
                android:padding="3px"
                android:layout_weight="1"/>
        </TableRow>

        <View
            android:layout_height="2dip"
            android:background="#FF909090" />

    </TableLayout>
</RelativeLayout>
